refactor: rename to codebase-mcp with npx support
- Rename project: acemcp-node -> codebase-mcp
- Add bin field for npx support
- Update all references: acemcp -> codebase-mcp
- Change config dir: ~/.acemcp -> ~/.codebase-mcp
- Update UI title: Codebase & Prompt Enhance
- Simplify README with quick start guide
- Web port conflict handling already in place

--- a/settings.toml.example
+++ b/settings.toml.example
@@ -1,4 +1,4 @@
-# ~/.acemcp/settings.toml.example
+# ~/.codebase-mcp/settings.toml.example
 # Copy this file to settings.toml and fill in your credentials
 
 # === 索引服务 API 配置（用于 codebase-retrieval）===
