--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "codebase-retrieval-mcp",
+  "name": "codebase-mcp",
   "version": "0.1.4",
   "description": "MCP server for codebase retrieval and prompt enhancement - Node.js implementation",
   "main": "dist/index.js",
   "type": "module",
+  "bin": {
+    "codebase-mcp": "./dist/index.js"
+  },
   "scripts": {
     "build": "tsc && npm run copy-templates",
     "copy-templates": "node -e \"require('fs').cpSync('src/web/templates', 'dist/web/templates', {recursive: true})\"",
