--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Dependencies
 node_modules/
+packages/*/node_modules/
 
 # Build output
 dist/
+packages/*/dist/
+packages/*/build/
 *.tsbuildinfo
 
 # Logs
