--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "codebase-mcp",
+  "name": "codebase-mcp-monorepo",
   "version": "0.1.4",
-  "description": "MCP server for codebase retrieval and prompt enhancement - Node.js implementation",
-  "main": "dist/index.js",
+  "description": "MCP server for codebase retrieval and prompt enhancement - Monorepo",
+  "private": true,
   "type": "module",
-  "bin": {
-    "codebase-mcp": "./dist/index.js"
-  },
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "build": "tsc && npm run copy-templates",
-    "copy-templates": "node -e \"require('fs').cpSync('src/web/templates', 'dist/web/templates', {recursive: true})\"",
-    "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js",
-    "start:web": "node dist/index.js --web-port 8090",
-    "test": "node test-server.js",
+    "build": "npm run build --workspaces --if-present",
+    "build:shared": "npm run build -w @codebase-mcp/shared",
+    "build:prompt-enhance": "npm run build -w @codebase-mcp/prompt-enhance",
+    "build:retrieval": "npm run build -w @codebase-mcp/retrieval",
+    "dev": "npm run dev --workspaces --if-present",
+    "dev:prompt-enhance": "npm run dev -w @codebase-mcp/prompt-enhance",
+    "dev:retrieval": "npm run dev -w @codebase-mcp/retrieval",
+    "test": "npm run test --workspaces --if-present",
+    "test:retrieval": "npm run test -w @codebase-mcp/retrieval",
+    "clean": "npm run clean --workspaces --if-present",
+    "package:prompt-enhance": "npm run package -w @codebase-mcp/prompt-enhance",
     "deploy:prepare": "node scripts/deploy-prepare.js",
     "deploy": "node scripts/deploy.js"
   },
