ci(retrieval): add Windows EXE build workflow and packaging scripts
- Add GitHub Actions workflow for building Windows EXE with pkg
- Create pkg configuration for bundling retrieval package as standalone executable
- Add PowerShell installation script for registering EXE to system PATH
- Update retrieval package.json with build:bundle and package:pkg scripts
- Add build.mjs for creating CommonJS bundle from TypeScript source
- Update shared logger with improved formatting for CLI output
- Add test script for verifying EXE execution and functionality
- Update prompt.txt with latest configuration examples
- Remove outdated backup files
- Enable portable distribution with README and installation instructions
- Automate ZIP archive creation for release distribution

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:retrieval": "npm run test -w @codebase-mcp/retrieval",
     "clean": "npm run clean --workspaces --if-present",
     "package:prompt-enhance": "npm run package -w @codebase-mcp/prompt-enhance",
+    "package:retrieval": "npm run package:pkg -w @codebase-mcp/retrieval",
     "deploy:prepare": "node scripts/deploy-prepare.js",
     "deploy": "node scripts/deploy.js"
   },
