--- a/packages/retrieval/package.json
+++ b/packages/retrieval/package.json
@@ -10,11 +10,14 @@
   },
   "scripts": {
     "build": "tsc && npm run copy-templates",
+    "build:bundle": "node build.mjs",
     "copy-templates": "node -e \"const fs = require('fs'); if (fs.existsSync('src/web/templates')) fs.cpSync('src/web/templates', 'dist/web/templates', {recursive: true})\"",
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "start:web": "node dist/index.js --web-port 8090",
-    "clean": "rimraf dist",
+    "clean": "rimraf dist build",
+    "package:pkg": "npm run build:bundle && pkg dist/bundle.cjs --targets node18-win-x64 --output build/pkg/codebase-retrieval-win-x64.exe --compress GZip && npm run copy-templates-to-build",
+    "copy-templates-to-build": "node -e \"const fs = require('fs'); const path = require('path'); const src = 'dist/web/templates'; const dest = 'build/pkg/web/templates'; if (fs.existsSync(src)) { fs.mkdirSync(path.dirname(dest), {recursive: true}); fs.cpSync(src, dest, {recursive: true}); console.log('✓ Templates copied to build/pkg/web/templates'); } else { console.error('✗ Source templates not found'); }\"",
     "test": "echo \"No tests yet\" && exit 0"
   },
   "keywords": [
@@ -38,6 +41,8 @@
     "@types/express": "^4.17.21",
     "@types/node": "^24.10.0",
     "@types/ws": "^8.5.12",
+    "esbuild": "^0.25.12",
+    "pkg": "^5.8.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
