fix: improve prompt context assembly and gitignore file scanning
Changes:
- Fix prompt context assembly to avoid empty content sections
  * Add .trim() checks for all content items (system prompt, user guidelines, README, selected files)
  * Add detailed logging for context assembly (added/skipped with reasons)
  * Ensure only non-empty content is included in context

- Fix .gitignore upward search in fileScanner
  * Search parent directories for .gitignore files
  * Use gitignoreRoot as base path for relative path calculation
  * Properly exclude files in subdirectories

- Update documentation
  * Add PROMPT_CONTEXT_FIX.md with detailed fix explanation
  * Add GITIGNORE_FIX.md with upward search implementation
  * Add CLEANUP_COMPLETE.md documenting removed files

Note: Rebuilt Prompt Enhance Electron app (v0.1.0) locally
      exe files not committed due to GitHub 100MB limit
      Use GitHub Releases for distribution

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ packages/*/dist/
 packages/*/build/
 *.tsbuildinfo
 
+# Note: exe files are too large for GitHub (>100MB)
+# Use GitHub Releases to distribute exe files
+
 # Logs
 *.log
 logs/
