fix: resolve dev server startup and template loading issues

--- a/packages/prompt-enhance/package.json
+++ b/packages/prompt-enhance/package.json
@@ -13,7 +13,9 @@
     "build:types": "tsc",
     "build:electron": "tsc && npm run copy-templates",
     "copy-templates": "node -e \"const fs = require('fs'); const path = require('path'); if (fs.existsSync('src/web/templates')) { fs.cpSync('src/web/templates', 'dist/web/templates', {recursive: true}); console.log('✓ Templates copied to dist/web/templates'); const files = fs.readdirSync('dist/web/templates'); console.log('  Files:', files.join(', ')); } else { console.error('✗ src/web/templates not found'); }\"",
-    "dev": "tsx watch src/index.ts",
+    "dev": "npm run build:shared && npm run build && node dist/bundle.cjs",
+    "dev:watch": "npm run build:shared && concurrently \"tsc --watch\" \"nodemon --watch dist dist/index.js\"",
+    "build:shared": "npm run build -w @codebase-mcp/shared --prefix ../..",
     "dev:electron": "npm run build:electron && electron .",
     "start": "node dist/index.js",
     "start:electron": "electron .",
