--- a/packages/prompt-enhance/package.json
+++ b/packages/prompt-enhance/package.json
@@ -9,9 +9,9 @@
     "prompt-enhance": "./dist/index.js"
   },
   "scripts": {
-    "build": "node build.mjs",
+    "build": "node build.mjs && node scripts/copy-vendor.js",
     "build:types": "tsc",
-    "build:electron": "tsc && npm run copy-templates",
+    "build:electron": "tsc && npm run copy-templates && node scripts/copy-vendor.js",
     "copy-templates": "node -e \"const fs = require('fs'); const path = require('path'); if (fs.existsSync('src/web/templates')) { fs.cpSync('src/web/templates', 'dist/web/templates', {recursive: true}); console.log('✓ Templates copied to dist/web/templates'); const files = fs.readdirSync('dist/web/templates'); console.log('  Files:', files.join(', ')); } else { console.error('✗ src/web/templates not found'); }\"",
     "dev": "npm run build:shared && npm run build && node dist/bundle.cjs",
     "dev:watch": "npm run build:shared && concurrently \"tsc --watch\" \"nodemon --watch dist dist/index.js\"",
@@ -20,7 +20,8 @@
     "start": "node dist/index.js",
     "start:electron": "electron .",
     "clean": "rimraf dist build",
-    "package:pkg": "npm run build && pkg dist/bundle.cjs --config pkg.config.json --output build/pkg/prompt-enhance-win-x64.exe && npm run copy-prompt-to-build",
+    "package:pkg": "npm run build && pkg dist/bundle.cjs --config pkg.config.json --output build/pkg/prompt-enhance-win-x64.exe && npm run copy-prompt-to-build && npm run copy-templates-to-build",
+    "copy-templates-to-build": "node -e \"const fs = require('fs'); const path = require('path'); const src = 'dist/web/templates'; const dest = 'build/pkg/web/templates'; if (fs.existsSync(src)) { fs.mkdirSync(path.dirname(dest), {recursive: true}); fs.cpSync(src, dest, {recursive: true}); console.log('✓ Templates copied to build/pkg/web/templates'); } else { console.error('✗ Source templates not found'); }\"",
     "package:electron": "npm run build:electron && electron-builder --config electron-builder.json",
     "package:electron:win": "npm run build:electron && electron-builder --win --config electron-builder.json",
     "package:electron:mac": "npm run build:electron && electron-builder --mac --config electron-builder.json",
@@ -47,10 +48,12 @@
     "@types/express": "^4.17.21",
     "@types/node": "^24.10.0",
     "@types/ws": "^8.5.12",
+    "alpinejs": "^3.15.2",
     "electron": "^39.2.1",
     "electron-builder": "^26.0.12",
     "esbuild": "^0.25.12",
     "pkg": "^5.8.1",
+    "tailwindcss": "^4.1.17",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
